@@ -14,8 +14,13 @@
 #  A copy of the GNU General Public License is available at
 #  http://www.r-project.org/Licenses/
 
-norm <- function(x, type = c("O", "I", "F", "M")) {
-    .Call("La_dlange", x, type, PACKAGE="base")
+norm <- function(x, type = c("O", "I", "F", "M", "2")) {
+    if(identical("2", type)) {
+	svd(x, nu=0L, nv=0L)$d[1L]
+	## *faster* at least on some platforms {but possibly less accurate}:
+	##sqrt(eigen(crossprod(x), symmetric=TRUE, only.values=TRUE)$values[1L])
+    } else
+	.Call("La_dlange", x, type, PACKAGE="base")
 } ## and define it as implicitGeneric, so S4 methods are consistent
 
 kappa <- function(z, ...) UseMethod("kappa")
