@@ -1,7 +1,7 @@
 % File src/library/base/man/norm.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 2010 R Core Development Team
-% Copyright 2010 The R Foundation
+% Copyright 2010--2012 R Core Development Team
+% Copyright 2010--2012 The R Foundation
 % Distributed under GPL 2 or later
 
 \newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
@@ -11,12 +11,13 @@
 \title{Compute the Norm of a Matrix}
 \description{
   Computes a matrix norm of \code{x} using Lapack.  The norm can be
-  the one norm, the infinity norm, the Frobenius norm, or the maximum
-  modulus among elements of a matrix, as determined by the value of
-  \code{type}.
+  the one (\code{"O"}) norm, the infinity (\code{"I"}) norm, the
+  Frobenius (\code{"F"}) norm, the maximum modulus (\code{"M"}) among
+  elements of a matrix, or the \dQuote{spectral} or \code{"2"}-norm, as
+  determined by the value of \code{type}.
 }
 \usage{
-norm(x, type = c("O", "I", "F", "M"))
+norm(x, type = c("O", "I", "F", "M", "2"))
 }
 \arguments{
   \item{x}{numeric matrix; note that packages such as \CRANpkg{Matrix}
@@ -30,9 +31,11 @@ norm(x, type = c("O", "I", "F", "M"))
       \item{\code{"I"} or \code{"i"}}{specifies the \bold{i}nfinity norm (maximum
 	absolute row sum);}
       \item{\code{"F"} or \code{"f"}}{specifies the \bold{F}robenius norm (the
-	Euclidean norm of \code{x} treated as if it were a vector); and}
+	Euclidean norm of \code{x} treated as if it were a vector);}
       \item{\code{"M"} or \code{"m"}}{specifies the \bold{m}aximum modulus of
-	all the elements in \code{x}.}
+	all the elements in \code{x}; and}
+      \item{\code{"2"}}{specifies the \dQuote{spectral} or 2-norm, which
+	is the largest singular value (\code{\link{svd}}) of \code{x}.}
     }
     The default is \code{"O"}.  Only the first character of
     \code{type[1]} is used.}
@@ -65,7 +68,7 @@ stopifnot(all.equal(norm(x1, "F"),
 
 hilbert <- function(n) { i <- 1:n; 1 / outer(i - 1, i, "+") }
 h9 <- hilbert(9)
-## all 4 types of norm:
+## all 5 types of norm:
 (nTyp <- eval(formals(base::norm)$type))
 sapply(nTyp, norm, x=h9)
 }
